fixed text overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -519,7 +519,7 @@ ul.parties-dropdown a.disabled:hover {
 
 #title-dropdowns > div:first-child {
   float: left;
-  margin-left: 30px;
+  margin-left: 18px;
   color: #b81300;
 }
 
